@@ -12,6 +12,9 @@ Corrections:
 	a fork loop that was only stopped by FD exhaustion caused by FD leak.
 	Test: RECVFROM_FORK_LOOP
 
+	socat 1.8.0.0 had an FD leak with addresses of type RECVFROM with fork.
+	Test: RECVFROM_FORK_LEAK
+
 Features:
 	Total inactivity timeout option -T 0 now means 0.0 seconds; up to
 	version 1.8.0.0 it meant no total inactivity timeout.
